# freeswitch

./: configure.ac  freeswitch.spec
fscomm/conf/: freeswitch.xml
src/: switch_channel.c
src/mod/applications/mod_conference/: conference_loop.c  mod_conference.c  mod_conference.h
src/mod/applications/mod_dptools/: mod_dptools.c
src/mod/endpoints/mod_agora/: AGEngineEventHandler.cpp  AGEngineEventHandler.h  AgoraSdk.cpp  AgoraSdk.h  AgoraServerSdk.cpp  AgoraServerSdk.h  AudioFrameObserver.cpp  AudioFrameObserver.h  IAgoraLinuxSdkCommon.h  IAgoraRecordingEngine.h  IAgoraServerEngine.h  Makefile.am  SPSparse_SPS.cpp  SPSparse_SPS.h  agora.c  agora.cpp  agora.h  agora_rtm.cpp  agora_rtm.h  agora_video.cpp  agora_video.h  mod_agora.c  mod_agora.cpp
src/mod/endpoints/mod_agora/agora_libs/: a.out
src/mod/endpoints/mod_agora/conf/autoload_configs/: agora.conf.xml
src/mod/event_handlers/mod_rayo/test/: Makefile  Makefile.in
